--- a/templates/base.html
+++ b/templates/base.html
@@ -546,18 +546,35 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="/"><i class="fas fa-home me-1"></i> Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/profile"><i class="fas fa-user me-1"></i> Profile</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/tasks"><i class="fas fa-tasks me-1"></i> Tasks</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/schedule"><i class="fas fa-calendar-alt me-1"></i> Schedule</a>
-                    </li>
+                    {% if current_user.is_authenticated %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="/"><i class="fas fa-home me-1"></i> Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/profile"><i class="fas fa-user me-1"></i> Profile</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/tasks"><i class="fas fa-tasks me-1"></i> Tasks</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/schedule"><i class="fas fa-calendar-alt me-1"></i> Schedule</a>
+                        </li>
+                        {% if current_user.is_admin %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="/admin"><i class="fas fa-cogs me-1"></i> Admin</a>
+                        </li>
+                        {% endif %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="/logout"><i class="fas fa-sign-out-alt me-1"></i> Logout</a>
+                        </li>
+                    {% else %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="/login"><i class="fas fa-sign-in-alt me-1"></i> Login</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/register"><i class="fas fa-user-plus me-1"></i> Register</a>
+                        </li>
+                    {% endif %}
                 </ul>
             </div>
         </div>
@@ -566,6 +583,7 @@
     <div class="container-fluid">
         <div class="row">
             <!-- Sidebar -->
+            {% if current_user.is_authenticated %}
             <div class="col-lg-2 d-none d-lg-block sidebar">
                 <ul class="nav flex-column">
                     <li class="nav-item">
@@ -588,11 +606,19 @@
                             <i class="fas fa-calendar-alt me-2"></i> Schedule
                         </a>
                     </li>
+                    {% if current_user.is_admin %}
+                    <li class="nav-item">
+                        <a class="nav-link {{ 'active' if request.endpoint == 'admin' else '' }}" href="/admin">
+                            <i class="fas fa-cogs me-2"></i> Admin Panel
+                        </a>
+                    </li>
+                    {% endif %}
                 </ul>
             </div>
+            {% endif %}
 
             <!-- Main Content -->
-            <div class="col-lg-10 col-md-12">
+            <div class="{% if current_user.is_authenticated %}col-lg-10 col-md-12{% else %}col-12{% endif %}">
                 {% block content %}{% endblock %}
             </div>
         </div>
